# cpp_server_tpl

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  .gitmodules  CMakeLists.txt
{{ cookiecutter.repo_name }}/include/: stdcfg.hpp.in
{{ cookiecutter.repo_name }}/src/: CMakeLists.txt  main.cpp
